--- a/src/pages/css/remerciments.css
+++ b/src/pages/css/remerciments.css
@@ -220,7 +220,9 @@
   .remerciements-header h1 {
     font-size: 1.8rem;
   }
-
+  .thank-card {
+    width: 60%;
+  }
   .thank-card h2 {
     font-size: 1.2rem;
   }
